--- a/Tugas Pertemuan 4 (01).html
+++ b/Tugas Pertemuan 4 (01).html
@@ -168,6 +168,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
+    <!-- Our Latest Work -->
+    <div class="container-fluid py-5">
+        <h2 class="text-center mb-5 fw-bold">Our Latest Work</h2>
+        <div class="row row-cols-5 g-0">
+            <div class="col-3 g-0">
+                <img src="dinding.jpg" alt="" class="w-100" />
+            </div>
+            <div class="col-3 g-0">
+                <img src="kimetsu.jpg" alt="" class="w-100" />
+            </div>
+            <div class="col-3 g-0">
+                <img src="wanpis.jpg.jpg" alt="" class="w-100" />
+            </div>
+            <div class="col-3 g-0">
+                <img src="kyubi.jpg" alt="" class="w-100" />
+            </div>
+        </div>
+
+        <div class="row row-cols-4 w-125 mx-auto g-0">
+            <div class="col-3 g-0">
+                <img src="dinding.jpg" alt="" class="w-100" />
+            </div>
+            <div class="col-3 g-0">
+                <img src="kimetsu.jpg" alt="" class="w-100" />
+            </div>
+            <div class="col-3 g-0">
+                <img src="wanpis.jpg.jpg" alt="" class="w-100" />
+            </div>
+            <div class="col-3 g-0">
+                <img src="kyubi.jpg" alt="" class="w-100" />
+            </div>
+        </div>
+    </div>
+
+
 
 </body>
 
